<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
	xmlns:android="http://schemas.android.com/apk/res/android" 
	android:layout_height="fill_parent" 
	android:layout_width="fill_parent" 
	android:orientation="vertical"
	android:background="@color/background_material_light"
	>
<include
    layout="@layout/system_actionbar_black"
    />
<!--Main Area-->
<ScrollView
    android:layout_height="wrap_content" 
    android:layout_width="fill_parent" 
    android:id="@+id/help_svew">
    <LinearLayout 
        android:layout_height="wrap_content" 
        android:layout_width="fill_parent" 
        android:orientation="vertical">
		<TextView 
			android:layout_height="wrap_content" 
			android:layout_width="fill_parent"
			android:text="@string/help_title_one"
			android:textColor="@color/Blue_SP" 
			android:padding="10dp"
			android:textSize="17.0sp"/>
			<View
			    android:layout_width="match_parent"
			    android:layout_height="0.5dp"
			    android:background="@color/line_border"     
			    />
			<View
			    android:layout_width="match_parent"
			    android:layout_height="0.5dp"
			    android:background="@color/White"     
			    />
		<LinearLayout 
        	android:layout_height="wrap_content" 
        	android:layout_width="wrap_content" 
        	android:orientation="vertical"
			android:padding="5dp"
			android:layout_margin="5dp"
        	android:background="@drawable/help_bg"		    
		    >
		<TextView 
			android:layout_height="wrap_content" 
			android:layout_width="fill_parent"
			android:text="@string/help_1_1"
			android:textColor="@color/Black_SP" 
			android:paddingLeft="10dp"
			android:paddingRight="10dp"
			android:paddingTop="10dp"
			android:textSize="17.0sp"/>
		<TextView 
			android:layout_height="wrap_content" 
			android:layout_width="fill_parent"
			android:text="@string/help_1_1_instroduce"
			android:textColor="@color/Gainsboro_SP" 
			android:padding="10dp"
			/>
		<View 
			android:layout_height="wrap_content" 
			android:layout_width="match_parent"
			android:background="@drawable/help_line"   
    		/>
		<TextView 
			android:layout_height="wrap_content" 
			android:layout_width="fill_parent"
			android:text="@string/help_1_2"
			android:textColor="@color/Black_SP" 
			android:paddingLeft="10dp"
			android:paddingRight="10dp"
			android:paddingTop="10dp"
			android:textSize="17.0sp"/>
		<TextView 
			android:layout_height="wrap_content" 
			android:layout_width="fill_parent"
			android:text="@string/help_1_2_instroduce"
			android:textColor="@color/Gainsboro_SP" 
			android:padding="10dp"
			/>
		</LinearLayout>
		<TextView 
			android:layout_height="wrap_content" 
			android:layout_width="fill_parent"
			android:text="@string/help_title_two"
			android:textColor="@color/Blue_SP" 
			android:padding="10dp"
			android:textSize="17.0sp"/>
			<View
			    android:layout_width="match_parent"
			    android:layout_height="0.5dp"
			    android:background="@color/line_border"     
			    />
			<View
			    android:layout_width="match_parent"
			    android:layout_height="0.5dp"
			    android:background="@color/White"     
			    />
		<LinearLayout 
        	android:layout_height="wrap_content" 
        	android:layout_width="wrap_content" 
        	android:orientation="vertical"
			android:padding="5dp"
			android:layout_margin="5dp"
        	android:background="@drawable/help_bg"		    
		    >
		<TextView 
			android:layout_height="wrap_content" 
			android:layout_width="fill_parent"
			android:text="@string/help_2_1"
			android:textColor="@color/Black_SP" 
			android:paddingLeft="10dp"
			android:paddingRight="10dp"
			android:paddingTop="10dp"
			android:textSize="17.0sp"/>
		<TextView 
			android:layout_height="wrap_content" 
			android:layout_width="fill_parent"
			android:text="@string/help_2_1_instroduce"
			android:textColor="@color/Gainsboro_SP" 
			android:padding="10dp"
			/>
		<View 
			android:layout_height="wrap_content" 
			android:layout_width="match_parent"
			android:background="@drawable/help_line" 
    		/>
		<TextView 
			android:layout_height="wrap_content" 
			android:layout_width="fill_parent"
			android:text="@string/help_2_2"
			android:textColor="@color/Black_SP" 
			android:paddingLeft="10dp"
			android:paddingRight="10dp"
			android:paddingTop="10dp"
			android:textSize="17.0sp"/>
		<TextView 
			android:layout_height="wrap_content" 
			android:layout_width="fill_parent"
			android:text="@string/help_2_2_instroduce"
			android:textColor="@color/Gainsboro_SP" 
			android:padding="10dp"
			/>
		</LinearLayout>
		<TextView 
			android:layout_height="wrap_content" 
			android:layout_width="fill_parent"
			android:text="@string/help_title_three"
			android:textColor="@color/Blue_SP" 
			android:padding="10dp"
			android:textSize="17.0sp"/>
			<View
			    android:layout_width="match_parent"
			    android:layout_height="0.5dp"
			    android:background="@color/line_border"     
			    />
			<View
			    android:layout_width="match_parent"
			    android:layout_height="0.5dp"
			    android:background="@color/White"     
			    />
		<LinearLayout 
        	android:layout_height="wrap_content" 
        	android:layout_width="wrap_content" 
        	android:orientation="vertical"
			android:padding="5dp"
			android:layout_margin="5dp"
        	android:background="@drawable/help_bg"		    
		    >
		<TextView 
			android:layout_height="wrap_content" 
			android:layout_width="fill_parent"
			android:text="@string/help_3_1"
			android:textColor="@color/Black_SP" 
			android:paddingLeft="10dp"
			android:paddingRight="10dp"
			android:paddingTop="10dp"
			android:textSize="17.0sp"/>
		<TextView 
			android:layout_height="wrap_content" 
			android:layout_width="fill_parent"
			android:text="@string/help_3_1_instroduce"
			android:textColor="@color/Gainsboro_SP" 
			android:padding="10dp"
			/>
		<View 
			android:layout_height="wrap_content" 
			android:layout_width="match_parent"
			android:background="@drawable/help_line"   
    		/>
		<TextView 
			android:layout_height="wrap_content" 
			android:layout_width="fill_parent"
			android:text="@string/help_3_2"
			android:textColor="@color/Black_SP" 
			android:paddingLeft="10dp"
			android:paddingRight="10dp"
			android:paddingTop="10dp"
			android:textSize="17.0sp"/>
		<TextView 
			android:layout_height="wrap_content" 
			android:layout_width="fill_parent"
			android:text="@string/help_3_2_instroduce"
			android:textColor="@color/Gainsboro_SP" 
			android:padding="10dp"
			/>
		<View 
			android:layout_height="wrap_content" 
			android:layout_width="match_parent"
			android:background="@drawable/help_line"   
    		/>
		<TextView 
			android:layout_height="wrap_content" 
			android:layout_width="fill_parent"
			android:text="@string/help_3_3"
			android:textColor="@color/Black_SP" 
			android:paddingLeft="10dp"
			android:paddingRight="10dp"
			android:paddingTop="10dp"
			android:textSize="17.0sp"/>
		<TextView 
			android:layout_height="wrap_content" 
			android:layout_width="fill_parent"
			android:text="@string/help_3_3_instroduce"
			android:textColor="@color/Gainsboro_SP" 
			android:padding="10dp"
			/>
		</LinearLayout>
</LinearLayout>
</ScrollView>
</LinearLayout>