<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:flatui="http://schemas.android.com/apk/res-auto"
	android:id="@+id/choose_part"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical"
	android:layout_margin="10dp"
	android:background="@color/Black_SP"
	>
	<!--帆-->
	<TextView
	   	android:id="@+id/sp_s"
		android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/theme_blue_btn_rate"
        android:textColor="@color/White"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:text="@string/sp_hint1"
	    />
	<!--炮门-->
	<TextView
	   	android:id="@+id/sp_c"
		android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:background="@drawable/theme_blue_btn_rate"
        android:textColor="@color/White"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:text="@string/sp_hint2"
	    />
	<!--兵装①-->
	<TextView
	   	android:id="@+id/sp_eq"
		android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:background="@drawable/theme_blue_btn_rate"
        android:textColor="@color/White"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:text="@string/sp_hint3"       
	    />
	<!--兵装②-->
	<TextView
	   	android:id="@+id/sp_eq2"
		android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:background="@drawable/theme_blue_btn_rate"
        android:textColor="@color/White"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:text="@string/sp_hint4"       
	    />
	<com.key.doltool.view.flat.FlatButton
		flatui:fl_theme="@array/flat"
		flatui:fl_cornerRadius="3dp"
		flatui:fl_borderWidth="0.5dp"
		flatui:fl_touchEffect="fl_ripple"
    	flatui:fl_blockButtonEffectHeight="2dp"
    	android:id="@+id/build_btn" 
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:padding="10dp"
    	android:textColor="@color/Black_SP"
    	android:layout_margin="10dp"
    	android:text=""
    /> 
</LinearLayout>